--- a/faq-content/section-002-001/002.q001.md
+++ b/faq-content/section-002-001/002.q001.md
@@ -17,4 +17,4 @@ L'amorçage de la partition se fait sur deux étapes : Le Master Boot Record con
 
 Le secteur de boot de la partition (tout comme le MBR) contient un autre petit programme qui lit la première partie du système d'exploitation stocké sur cette partition (supposée bootable), puis le lance.
 
-Sur les nouveaux systèmes en [UEFI](https://fr.wikipedia.org/wiki/UEFI), Le programme d'amorçage va être stockée dans une partition ESP (EFI System Partition), qui est en fait une partition FAT32. Le code amorce sera sous forme d'un programme PE (Le format .exe de Windows). En cas de présence de plusieurs systèmes, chacun aura son propre dossier contentant son chargeur.
+Sur les nouveaux systèmes en [UEFI](https://fr.wikipedia.org/wiki/UEFI), le programme d'amorçage va être stocké dans une partition ESP (EFI System Partition), qui est en fait une partition FAT32. Le code d'amorce est au format [PE](https://docs.microsoft.com/en-us/windows/win32/debug/pe-format). En cas de présence de plusieurs systèmes, chacun aura son propre dossier contenant son chargeur.
