--- a/faq-content/section-002-001/002.q007.md
+++ b/faq-content/section-002-001/002.q007.md
@@ -13,4 +13,4 @@ UEFI est le remplaçant du traditionnel et vieillissant BIOS. Tout comme le BIOS
 Dans son fonctionnement, le logiciel de la carte mère va charger le programme placé sur la partition « EFI System Partition » du disque dur. Ce dernier doit avoir une table de partitionnement au format GPT. Dans le cas contraire, vous perdez les avantages d’UEFI.
 D’ailleurs, un des avantages mis en avant est celui du démarrage plus rapide.
 
-GPT intègre un MBR dit de protection, sur le premier secteur du disque, cei pour assurer une rétrocompatibilité en cas d'utilisation d'outils modifiant le MBR.
+GPT intègre un MBR dit de protection, sur le premier secteur du disque, ceci pour assurer une rétrocompatibilité en cas d'utilisation d'outils modifiant le MBR.
