--- a/faq-content/section-002-002/002.q004.md
+++ b/faq-content/section-002-002/002.q004.md
@@ -9,6 +9,7 @@ keywords: différence, Intel, AMD
 
 ## Quelle différence entre un processeur Intel et un processeur AMD ?
 
-Les processeurs Intel et AMD, bien que de marques et de conception interne différente, donneront le même résultat à l'execution. 
-Tout comme Intel avec les Core i3, i5,i7 et manitenant i9, AMD à plusieurs gammes de processeurs. Pour faire une comparaison en
-terme de puissance, il faut comparer des modèles équivalents. Les dénominations des modèles sont moins claires qu'avec Intel.
+Les processeurs Intel et AMD, bien que de marques et de conception interne différente, donneront le même résultat à l'execution.
+
+Tout comme Intel avec les Core i3, i5,i7 et maintenant i9, AMD à plusieurs gammes de processeurs. Pour faire une comparaison en
+terme de puissance, il faut comparer des modèles équivalents. Les dénominations des modèles AMD sont moins claires qu'avec Intel.
