--- a/faq-content/section-002-003/002.q002.md
+++ b/faq-content/section-002-003/002.q002.md
@@ -7,6 +7,6 @@ keywords: mémoire, NAND
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce qu'une mémoiree NAND ?
+## Qu'est ce qu'une mémoire NAND ?
 
 Il s'agit d'une technologie utilisée pour les mémoires FLASH. Les cases mémoires sont crées à partir de portes logiques NAND.
