--- a/faq-content/section-003/003.q014.md
+++ b/faq-content/section-003/003.q014.md
@@ -9,11 +9,8 @@ keywords: SSD
 
 ## Qu'est ce qu'un disque SSD ?
 
-Le Solid State Drive (SSD) est un disque dur non mécanique, plus proche de la mémoire non volatile. Au niveau système, celui-ci sera 
-vu et fonctionnera comme un disque dur classique.
+Le Solid State Drive (SSD) est un disque dur non mécanique, plus proche de la mémoire non volatile. Au niveau système, celui-ci sera vu et fonctionnera comme un disque dur classique.
 
-Ce type de mémoire de masse est donné pour un nombre de lecture/écriture par cellule. Le [TRIM](https://fr.wikipedia.org/wiki/Trim_(informatique))
-permet de gérer les particularités de ce type de disque (répartition des écritures pour ne pas toujours écrire sur les mêmes blocs).
+Ce type de mémoire de masse est donné pour un nombre de lecture/écriture par cellule. Le [TRIM](https://fr.wikipedia.org/wiki/Trim_(informatique)) permet de gérer les particularités de ce type de disque (répartition des écritures pour ne pas toujours écrire sur les mêmes blocs).
 
-Les systèmes de fichiers récent comme [BRTFS](https://fr.wikipedia.org/wiki/Btrfs)/[ZFS](https://en.wikipedia.org/wiki/ZFS) sous Linux et [APFS](https://fr.wikipedia.org/wiki/Apple_File_System) pour Mac OS (remplaçant le HFS+ sur les machines à disque SSD
- à partir de High Sierra) sont plus adaptés à l'utilisation des SSD de par leur utilisation du Copy-on-Write.
+Les systèmes de fichiers récent comme [BRTFS](https://fr.wikipedia.org/wiki/Btrfs)/[ZFS](https://en.wikipedia.org/wiki/ZFS) sous Linux et [APFS](https://fr.wikipedia.org/wiki/Apple_File_System) pour Mac OS (remplaçant le HFS+ sur les machines à disque SSD à partir de High Sierra) sont plus adaptés à l'utilisation des SSD de par leur utilisation du Copy-on-Write.
