--- a/faq-content/section-004/004.q003.md
+++ b/faq-content/section-004/004.q003.md
@@ -9,10 +9,8 @@ keywords: POE, Power Over Ethernet
 
 ## Qu'est-ce que le POE ?
 
-Le POE (Power Over Ethernet) est la norme permettant d'injecter un courant éléctrique sur le cablage réseau, ceci afin d'alimenter 
-électriquement des équipements tels que des caméras, téléphones IP.
-Pour utiliser cette fonctinnalité, il vous faudra un switch POE ainsi que des équipements compatibles. Un appareil avec une carte
-réseau (ordinateur, imprimante) qui n'est pas POE ne sera pas impacté par la présence du courant électrique sur le réseau.
+Le Power Over Ethernet (POE)) est la norme permettant d'injecter un courant éléctrique sur le cablage réseau, ceci afin d'alimenter électriquement des équipements tels que des caméras, téléphones IP...
 
-attention : En cas de réalisation ou modification de prises réseaux sur lequel est suceptible d'être utilisé du POE, il faudra être
-particulièrement vigilant pour éviter tout court circuit.
+Pour utiliser cette fonctinnalité, il vous faudra un switch POE ainsi que des équipements compatibles. Un appareil avec une carte réseau (ordinateur, imprimante) qui n'est pas POE ne sera pas impacté par la présence du courant électrique sur le réseau.
+
+> En cas de réalisation ou modification de prises réseaux sur lequel est suceptible d'être utilisé du POE, il faudra être particulièrement vigilant pour éviter tout court circuit.
