Add missing entries that were added online

--- a/faq-content/005/005.q002.md
+++ b/faq-content/005/005.q002.md
@@ -1,17 +1,16 @@
 ---
-createDate: 2007-09-30
-lastUpdateDate: 2007-09-30
-author: lakitrid
-keywords: définition, micrologiciel
+createDate: 2022-05-03
+lastUpdateDate: 2025-03-01
+author: LittleWhite
+keywords: Thunderbolt, débits, versions
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce qu'un micrologiciel et à quoi sert-il ?
+## Quels sont les débits des connectiques Thunderbolt ?
 
-Un périphérique est utilisable par un système d'exploitation en passant par deux couches logicielles :
+Les connectiques Thunderbolt offrent des débits différent suivant les versions. La spécification stipule les débits suivants :
 
-- le pilote de périphérique (driver)
-- le micrologiciel (firmware)
-
-Le pilote de périphérique offre une interface de commande au système d'exploitation. Celle-ci va permettre à un logiciel ou au système d'exploitation de communiquer avec le périphérique.
+|  Thunderbolt 1  |   Thunderbolt 2  |  Thunderbolt 3 | Thunderbolt 4  | Thunderbolt 5 |
+|-----------------|------------------|----------------|----------------|---------------|
+|    10 Gbps      |     20 Gbps      |     40 Gbps    |    40 Gbps     |     80 Gbps   |
