--- a/faq-content/005/005.q001.md
+++ b/faq-content/005/005.q001.md
@@ -1,14 +1,16 @@
 ---
-createDate: 2007-09-28
-lastUpdateDate: 2007-09-28
-author: Arnaud F.
-keywords: batterie, laptop, portable
+createDate: 2022-05-03
+lastUpdateDate: 2025-03-01
+author: LittleWhite
+keywords: USB, débits, versions
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Dois-je enlever la batterie de mon PC portable lorsque ce celui-ci est connecté au secteur?
+## Quels sont les débits des connectiques USB ?
 
-Les nouvelles batteries (lithium-ion) ne sont plus sujettes à ce qu'on appelle l'effet mémoire (effet qui entraîne une diminution de la capacité de la batterie) et il est donc inutile d'ôter les batteries quand vous êtes branchés sur le secteur. Vous ne perdez que quelques minutes d'autonomie par an.
+Les connectiques USB offrent des débits différent suivant les versions. La spécification stipule les débits suivants :
 
-Pour les anciens modèles de batteries, il est conseillé de les ôter afin de préserver votre batterie au maximum de sa capacité (ne le faîtes que si votre batterie est pleine et que si votre ordinateur est branché sur une alimentation secteur "sûre").
+|  USB 1  |   USB 2  |  USB 3 | USB 3.1 | USB 3.2 |  USB 4  |
+|---------|----------|--------|---------|---------|---------|
+| 12 Mbps | 480 Mbps | 5 Gbps | 10 Gbps | 20 Gbps | 40 Gbps |
