Add new FAQ entries related to hard-drives

--- a/faq-content/003/003.q001.md
+++ b/faq-content/003/003.q001.md
@@ -1,21 +1,12 @@
 ---
-createDate: 2007-09-28
-lastUpdateDate: 2007-09-28
-author: Baptiste Wicht
-keywords: SATA, IDE, différence
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
+author: LittleWhite
+keywords: SATA, IDE
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Quelle est la différence entre SATA et IDE ?
+## Qu'est-ce que Serial ATA (SATA) ?
 
-La différence est essentiellement en quatre points :
-
-- Débit de transmission de données (SATA est plus rapide)
-- Forme physique du connecteur (celui du SATA est plus petit)
-- Nombre de disques durs par câble (1 pour SATA et 2 pour PATA)
-- Longueur maximale des câbles (1m pour SATA et 45cm pour PATA)
-
-La norme SATA permet un débit théorique très élevé qui peut atteindre 192Mo/s. La SATA-II arrive même à 300Mo/s théorique. Le SATA-III ateingnant un débit théorique de 768 Mo/s. Les fabricants ont d'ores et déjà annoncé une amélioration à 600Mo/s. Ceci est incomparable avec le débit obtenu avec les IDEs qui ne dépasse pas le 133 Mo/s en mode Ultra DMA. Les PC récents sont équipés de disques durs SATA.
-
-SATA signifie Serial ATA, en opposition à PATA Parallel ATA, autre nom de l'IDE. Technologiquement, la différence se situe dans la façon dont les données sont transmises, en parallèle pour le PATA en série pour le SATA.
+Le Serial ATA (SATA) est une connectique pour brancher les disques durs (mécaniques ou SSD 2,5'') permettant un débit théorique allant jusqu'à 6 Gbit/s (norme nommée SATA-III/SATA 600) et d'un débit pratique de 600 Mo/s. C'est la connectique habituellement utilisée pour connecter un disque dur à la carte mère.
