--- a/faq-content/003/003.q002.md
+++ b/faq-content/003/003.q002.md
@@ -1,13 +1,14 @@
 ---
-createDate: 2007-09-28
-lastUpdateDate: 2007-09-28
-author: Guardian
-keywords: boot, démarrage, IDE
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
+author: LittleWhite
+keywords: SCSI, SAS
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Comment booter sur le deuxième disque dur IDE ?
+## Qu'est-ce que Serial Attached SCSI (SAS) ?
 
-Il est à noter que le premier périphérique de démarrage est celui mis au début de la liste de "séquence de démarrage" dans le BIOS. Si vous avez deux disques dur sur la même nappe, la priorité sera donnée dans ce cas à celui en mode maître (master). L'autre doit être en mode esclave (slave). Si vous voulez booter sur ce dernier, vous devez le mettre en "maître" et l'autre en "esclave".
-Vous démontez le disque dur et, en vous basant sur l'étiquette sur le boîtier, vous changez la position des cavaliers comme décrit. Ensuite, vous redémarrez le PC, mais le disque dur de boot doit contenir un OS, sinon vous devrez en installer un !
+Le Serial Attached SCSI (SAS) est un protocole permettant de déplacer des données depuis et vers des disques ou autre support de stockage. De plus, ce protocole repose sur une connectique spécifique, mais gère une compatibilité (optionnelle) avec le SATA.
+En comparaison avec le SATA, le SAS offre des débits plus élevés, allant jusqu'à 22,5 Gbit/s depuis la norme SAS-4 de 2017.
+Cette connectique est principalement utilisée dans les serveurs.
