--- a/faq-content/003/003.q008.md
+++ b/faq-content/003/003.q008.md
@@ -1,14 +1,19 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
-author: LittleWhite
-keywords: disque dur, raid, stockage, raid 1
+createDate: 2020-06-14
+lastUpdateDate: 2020-06-14
+author: Chrtophe
+keywords: M.2, Nvme, PCIe
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce que la stratégie RAID 1 ?
+## Qu'est ce qu'un disque M.2 ?
 
-Le RAID 1 duplique les données sur chacun des disques intégrant la stratégie. Ainsi, il faut que tous les disques tombent en panne pour provoquer une perte de données.
+M.2 n'est pas un format de disque mais un connecteur sur lequel on peut brancher un disque, une carte Wifi. Le terme de disque M.2 est cependant couramment utilisé.
 
-> Une telle stratégie peut permettre des gains de performances lorsque plusieurs utilisateurs accède à des fichiers : chaque disque peut être utilisé séparément pour répondre aux demandes le plus rapidement possible.
+Un disque au format M.2 va ressembler à une barette mémoire.
+
+Quelques particularités sont à savoir avoir ce type de disque :
+
+* Il existe plusieurs longueurs et plusieurs largeurs. Il vous faudra faire attention à ce que l'emplacement M.2 de votre carte mère puisse acceuillir le format que vous avez choisi.
+* Sur un connecteur M.2, vous pouvez brancher un disque M.2 SSD ou M.2 PCIe NMVe (et plus rarement Ultra M.2). Les performances et le prix ne seront pas les mêmes. Il est d'ailleurs possible qu'une carte mère ait un connecteur M.2 acceptant les deux interfaces ou un connecteur pour le M.2 SATA et un autre M.2 pour le M.2 PCIe. De plus, ce dernier peut déjà être occupé. Il est aussi possible de n'avoir qu'un seul connecteur n'acceptant que l'un ou l'autre.
