--- a/faq-content/003/003.q011.md
+++ b/faq-content/003/003.q011.md
@@ -1,14 +1,16 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
-author: LittleWhite
-keywords: disque dur, raid, stockage, raid 10
+createDate: 2007-09-30
+lastUpdateDate: 2007-09-30
+author: Guardian
+keywords: SATA, non reconnu, problème
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce que la stratégie RAID 10 ?
+## Comment résoudre le problème d'un disque dur "SATA" non reconnu ?
 
-Le RAID 10 (ou RAID 1+0) a pour but d'obtenir les performances du RAID 0 (grâce à une répartitions des données) et la protection offerte par le RAID 1 (grâce à une duplication des données). Pour cela, la stratégie forme des paires sur lesquelles les données sont réparties. Les disques d'une même paire contient les mêmes données.
+Les disques Serial-ATA (SATA) ne sont parfois pas reconnus par le système d'exploitation.
 
-> Cette stratégie nécessite donc un minimum de quatre disques pour voir obtenir des améliorations de performances. Il est aussi possible de l'appliquer sur deux disques, mais cela revient à mettre en place du RAID 1.
+Généralement, c'est parce qu'il est nécessaire d'utiliser un pilote. Vérifiez que vous avez bien installé les pilotes Serial-ATA fournis avec votre carte-mère afin que le système d'exploitation soit capable de prendre en charge les disques SATA.
+
+Sinon, si vous avez perdu ce CD, vous pouvez consulter le site du constructeur du disque dur et télécharger le pilote nécessaire afin de l'installer.
