--- a/faq-content/005/005.q001.md
+++ b/faq-content/005/005.q001.md
@@ -1,16 +1,14 @@
 ---
-createDate: 2022-05-03
-lastUpdateDate: 2025-03-01
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
 author: LittleWhite
-keywords: USB, débits, versions
+keywords: PCIe, PCI-express, débits, versions
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Quels sont les débits des connectiques USB ?
+## Qu'est-ce que PCI Express (PCIe) ?
 
-Les connectiques USB offrent des débits différent suivant les versions. La spécification stipule les débits suivants :
-
-|  USB 1  |   USB 2  |  USB 3 | USB 3.1 | USB 3.2 |  USB 4  |
-|---------|----------|--------|---------|---------|---------|
-| 12 Mbps | 480 Mbps | 5 Gbps | 10 Gbps | 20 Gbps | 40 Gbps |
+Le PCI Express est une norme de bus permettant la connexion de cartes d'extensions (y compris les disques SSD NVMe) avec la carte mère. Elle remplace les anciennes normes PCI et AGP.
+La norme permet plusieurs tailles de bus : 1 (nommée x1), 2 (x2), 4 (x4), 8 (x8) et 16 (x16).
+Au fil des évolutions, la norme offre des débits toujours plus importants. Précisément, le débit est doublé à chaque évolution et un bus PCIe 4 (norme établie en 2017) offre un débit de 1,969 Go/s sur une ligne.
