--- a/faq-content/003/003.q003.md
+++ b/faq-content/003/003.q003.md
@@ -1,19 +1,13 @@
 ---
-createDate: 2007-09-28
-lastUpdateDate: 2007-09-28
-author: Baptiste Wicht
-keywords: disque dur, formattage
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
+author: LittleWhite
+keywords: SCSI
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Comment formater un disque dur ?
+## Qu’est-ce que Small Computer System Interface (SCSI) ?
 
-> Le formatage d'un disque dur implique la perte de vos données !
-
-Il existe plusieurs façon de formater votre disque dur. Généralement il est conseillé d'effectuer un formatage avant toute installation d'une nouvelle version du système d'exploitation.
-Pour formater une partition vous pouvez :
-
-- Insérer une disquette de démarrage, booter dessus, taper la commande **FORMAT C:** (si vous voulez formater la partition C: ), valider par "Oui" (touche O ou Y). Cette technique obsolète n'est pratiquement plus utilisée.
-- Exploiter les fonctionnalités du CD d'installation des systèmes d'exploitation (Windows, Linux, etc. ) qui effectuent un formatage avant de débuter l'installation du système.
-- Utiliser les fonctionnalités de votre système d'exploitation qui vous permet de formater simplement un disque dur sans redémarrer. Cela implique bien entendu ne pas devoir formater la partition système.
+L’interface de communication « Small Computer System Interface » (SCSI) permet de faire communiquer des ordinateurs avec des périphériques ou même des ordinateurs entre eux. Sa particularité est de permettre l’échange de commandes compliquées devant être traitées par le périphérique de destination. Cela permet de libérer de la charge du processeur du système envoyant les commandes.
+À ses débuts, le SCSI décrit une interface de communication en parallèle. Depuis la norme SCSI-3, l’interface peut être en série. Le protocole SAS est une évolution du protocole SCSI.
