--- a/faq-content/003/003.q004.md
+++ b/faq-content/003/003.q004.md
@@ -1,16 +1,21 @@
 ---
-createDate: 2007-09-30
-lastUpdateDate: 2007-09-30
-author: Guardian
-keywords: SATA, non reconnu, problème
+createDate: 2007-09-28
+lastUpdateDate: 2007-09-28
+author: Baptiste Wicht
+keywords: SATA, IDE, différence
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Comment résoudre le problème d'un disque dur "SATA" non reconnu ?
+## Quelle est la différence entre SATA et IDE ?
 
-Les disques Serial-ATA (SATA) ne sont parfois pas reconnus par le système d'exploitation.
+La différence est essentiellement en quatre points :
 
-Généralement, c'est parce qu'il est nécessaire d'utiliser un pilote. Vérifiez que vous avez bien installé les pilotes Serial-ATA fournis avec votre carte-mère afin que le système d'exploitation soit capable de prendre en charge les disques SATA.
+- Débit de transmission de données (SATA est plus rapide)
+- Forme physique du connecteur (celui du SATA est plus petit)
+- Nombre de disques durs par câble (1 pour SATA et 2 pour PATA)
+- Longueur maximale des câbles (1m pour SATA et 45cm pour PATA)
 
-Sinon, si vous avez perdu ce CD, vous pouvez consulter le site du constructeur du disque dur et télécharger le pilote nécessaire afin de l'installer.
+La norme SATA permet un débit théorique très élevé qui peut atteindre 192Mo/s. La SATA-II arrive même à 300Mo/s théorique. Le SATA-III ateingnant un débit théorique de 768 Mo/s. Les fabricants ont d'ores et déjà annoncé une amélioration à 600Mo/s. Ceci est incomparable avec le débit obtenu avec les IDEs qui ne dépasse pas le 133 Mo/s en mode Ultra DMA. Les PC récents sont équipés de disques durs SATA.
+
+SATA signifie Serial ATA, en opposition à PATA Parallel ATA, autre nom de l'IDE. Technologiquement, la différence se situe dans la façon dont les données sont transmises, en parallèle pour le PATA en série pour le SATA.
