--- a/faq-content/003/003.q005.md
+++ b/faq-content/003/003.q005.md
@@ -1,33 +1,20 @@
 ---
-createDate: 2007-10-31
-lastUpdateDate: 2007-10-31
-author: Baptiste Wicht
-keywords: disque dur, transfert
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
+author: LittleWhite
+keywords: NAS, network, réseau, stockage
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Comment effectuer un transfert de disque dur à disque dur ?
+## Qu'est-ce qu'un Network Attached Storage (NAS) ?
 
-Deux techniques existent :
+Un Network Attached Storage (NAS) est, littéralement, un espace de stockage relié au réseau. Plus précisément, c'est une machine contenant plusieurs disques durs permettant de rendre accessibles les données stockées sur un réseau informatique. Ainsi, plusieurs machines/utilisateurs peuvent accéder à ces fichiers en même temps.
+Un NAS est généralement un équipement dédié à ce stockage des données. Deux configurations sont alors possibles :
 
-    Créer une image du disque et l'installer ensuite sur le disque dur cible
-    Effectuer une copie disque à disque
+- le NAS n'embarque pas de CPU et ne gère donc que le stockage. Il est donc nécessaire d'avoir une machine associée gérant le NAS et les accès des utilisateurs au NAS ;
+- le NAS embarque un CPU et est donc un PC spécialisé et autonome.
 
-Il est généralement conseillé de créer une image du disque dur source pour l'extraire sur le disque dur de destination. Mais une copie disque à disque est en général plus pratique si vous ne comptez pas garder l'image.
+La seconde configuration est la plus courante, notamment pour les particuliers.
 
-Pour faire cela, on peut utiliser différents logiciels :
-
-- Pour Windows :
-    - DrvClonerXP (gratuit)
-    - Partition Saving (gratuit)
-    - DriveImage XML (gratuit)
-    - Acronis (payant)
-    - Norton Ghost (payant)
-    - PC Cloneur (payant)
-    - Perfect Image (payant)
-- Pour Linux :
-    - G4U
-    - KBackup
-    - PartImage
-    - La commande DD
+Plusieurs constructeurs (Synology, QNAP, TerraMaster, ...) proposent des NAS prêts à l'emploi, offrant un système d'exploitation à la configuration simplifiée et conçu spécifiquement pour cet usage. Toutefois, il est parfaitement possible d'utiliser un PC et un système d'exploitation quelconque pour cette tâche.
