--- a/faq-content/003/003.q006.md
+++ b/faq-content/003/003.q006.md
@@ -1,21 +1,17 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
+createDate: 2025-05-28
+lastUpdateDate: 2025-05-28
 author: LittleWhite
-keywords: disque dur, raid, stockage
+keywords: SAN
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce qu'un RAID ?
+## Qu’est-ce que Storage Area Network (SAN) ?
 
-Un RAID (pour *Redundant Array of Indenpendent Disks*) est une stratégie d'utilisation d'un ensemble de disques durs. Autrement dit, il permet d'offrir une abstraction à l'espace de stockage offert par plusieurs disques. Par conséquent (et suivant la stratégie appliquée), deux disques durs de 4 To pourront être vus par l'utilisateur comme un unique espace de stockage de 4 To dans lequel, les données seront répliquées (de manière transparente pour l'utilisateur) sur les deux disques.
+L’architecture de réseau Storage Area Network (SAN) décrit un réseau dans lequel les solutions de stockage sont connectés à un réseau. Dans un SAN, l’espace de stockage est exposé de manière brute et le client manipule cet espace comme si un nouveau disque dur était branché à la machine. C’est donc au client de gérer le formatage.
+Par conséquent, dans un SAN, l’espace de stockage peut évoluer de manière transparente. Aussi, dans un SAN, la machine disposant du stockage peut complètement être démunis de logique (un ensemble de disque disposant juste d’adaptateur réseau). La logique et, possiblement, les services de partage de fichiers (NFS, SMB) pourront alors être gérées sur un serveur dédié et indépendant de la solution de stockage. Finalement, cela permet d’avoir une solution de stockage qui peut être partagée entre plusieurs serveurs ou encore, une infrastructure qui peut être répartie sur plusieurs solutions de stockage.
+Pour la partie réseau, des protocoles ont été développés à cet usage :
 
-> Le RAID peut être contrôlé par un contrôleur matériel dédié ou par une couche logicielle.
-
-Il existe plusieurs stratégies de RAID dont le but est soit :
-
-* d'optimiser les performances (RAID 0) ;
-* d'éviter la perte de données lors d'une panne d'un disque dur (RAID 1).
-
-> Certaines stratégies permettent un compromis entre résistance à la perte de données et performances.
+- Internet Small Computer System (iSCSI), permettant de passer des commandes SCSI sur le réseau IP ;
+- Fibre Channel, un protocole conçu pour les superordinateurs, qui dispose d’un mode pour le transfert des commandes SCSI.
