--- a/faq-content/003/003.q007.md
+++ b/faq-content/003/003.q007.md
@@ -1,14 +1,16 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
-author: LittleWhite
-keywords: disque dur, raid, stockage, raid 0
+createDate: 2020-06-14
+lastUpdateDate: 2020-06-14
+author: Chrtophe
+keywords: SSD
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce que la stratégie RAID 0 ?
+## Qu'est ce qu'un disque SSD ?
 
-Le RAID 0 réparti les données sur les disques afin d'améliorer les performances. En effet, en découpant les données et en les répartissant sur les différents disques, la vitesse de lecture et d'écriture pourra être augmenté grace à une utilisation en parallèle des différents disques.
+Le Solid State Drive (SSD) est un disque dur non mécanique, plus proche de la mémoire non volatile. Au niveau système, celui-ci sera vu et fonctionnera comme un disque dur classique.
 
-Par contre, cette stratégie ne tolère aucune perte de disque.
+Ce type de mémoire de masse est donné pour un nombre de lecture/écriture par cellule. Le [TRIM](https://fr.wikipedia.org/wiki/Trim_(informatique)) permet de gérer les particularités de ce type de disque (répartition des écritures pour ne pas toujours écrire sur les mêmes blocs).
+
+Les systèmes de fichiers récent comme [BRTFS](https://fr.wikipedia.org/wiki/Btrfs)/[ZFS](https://en.wikipedia.org/wiki/ZFS) sous Linux et [APFS](https://fr.wikipedia.org/wiki/Apple_File_System) pour Mac OS (remplaçant le HFS+ sur les machines à disque SSD à partir de High Sierra) sont plus adaptés à l'utilisation des SSD de par leur utilisation du Copy-on-Write.
