--- a/faq-content/003/003.q009.md
+++ b/faq-content/003/003.q009.md
@@ -1,14 +1,13 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
-author: LittleWhite
-keywords: disque dur, raid, stockage, raid 5
+createDate: 2007-09-28
+lastUpdateDate: 2007-09-28
+author: Guardian
+keywords: boot, démarrage, IDE
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce que la stratégie RAID 5 ?
+## Comment booter sur le deuxième disque dur IDE ?
 
-Le RAID 5 reprend le principe de la répartition des données sur les disques tout en écrivant une donnée de parité supplémentaire. Grâce à cette donnée supplémentaire, la stratégie RAID 5 supporte la perte d'un disque. Toutefois, cette stratégie nécessite un minimum de trois disques pour fonctionner.
-
-> Lors du remplacement d'un disque, il est nécessaire de reconstruire les données du disque remplacé. Cette opération nécessite de lire les données des autres disques de la stratégie et peut donc prendre un temps considérable.
+Il est à noter que le premier périphérique de démarrage est celui mis au début de la liste de "séquence de démarrage" dans le BIOS. Si vous avez deux disques dur sur la même nappe, la priorité sera donnée dans ce cas à celui en mode maître (master). L'autre doit être en mode esclave (slave). Si vous voulez booter sur ce dernier, vous devez le mettre en "maître" et l'autre en "esclave".
+Vous démontez le disque dur et, en vous basant sur l'étiquette sur le boîtier, vous changez la position des cavaliers comme décrit. Ensuite, vous redémarrez le PC, mais le disque dur de boot doit contenir un OS, sinon vous devrez en installer un !
