--- a/faq-content/003/003.q010.md
+++ b/faq-content/003/003.q010.md
@@ -1,12 +1,19 @@
 ---
-createDate: 2020-06-06
-lastUpdateDate: 2020-06-06
-author: LittleWhite
-keywords: disque dur, raid, stockage, raid 6
+createDate: 2007-09-28
+lastUpdateDate: 2007-09-28
+author: Baptiste Wicht
+keywords: disque dur, formattage
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Qu'est ce que la stratégie RAID 6 ?
+## Comment formater un disque dur ?
 
-Le RAID 6 reprend le principe du RAID 5 mais en utilisant plus de données de contrôle. Par conséquent, cette stratégie nécessite au moins quatre disques et supporte la perte de deux disques.
+> Le formatage d'un disque dur implique la perte de vos données !
+
+Il existe plusieurs façon de formater votre disque dur. Généralement il est conseillé d'effectuer un formatage avant toute installation d'une nouvelle version du système d'exploitation.
+Pour formater une partition vous pouvez :
+
+- Insérer une disquette de démarrage, booter dessus, taper la commande **FORMAT C:** (si vous voulez formater la partition C: ), valider par "Oui" (touche O ou Y). Cette technique obsolète n'est pratiquement plus utilisée.
+- Exploiter les fonctionnalités du CD d'installation des systèmes d'exploitation (Windows, Linux, etc. ) qui effectuent un formatage avant de débuter l'installation du système.
+- Utiliser les fonctionnalités de votre système d'exploitation qui vous permet de formater simplement un disque dur sans redémarrer. Cela implique bien entendu ne pas devoir formater la partition système.
