--- a/faq-content/005/005.q002.md
+++ b/faq-content/005/005.q002.md
@@ -2,15 +2,15 @@
 createDate: 2022-05-03
 lastUpdateDate: 2025-03-01
 author: LittleWhite
-keywords: Thunderbolt, débits, versions
+keywords: USB, débits, versions
 ---
 
 # FAQ Hardware pour developpez.com
 
-## Quels sont les débits des connectiques Thunderbolt ?
+## Quels sont les débits des connectiques USB ?
 
-Les connectiques Thunderbolt offrent des débits différent suivant les versions. La spécification stipule les débits suivants :
+Les connectiques USB offrent des débits différent suivant les versions. La spécification stipule les débits suivants :
 
-|  Thunderbolt 1  |   Thunderbolt 2  |  Thunderbolt 3 | Thunderbolt 4  | Thunderbolt 5 |
-|-----------------|------------------|----------------|----------------|---------------|
-|    10 Gbps      |     20 Gbps      |     40 Gbps    |    40 Gbps     |     80 Gbps   |
+|  USB 1  |   USB 2  |  USB 3 | USB 3.1 | USB 3.2 |  USB 4  |
+|---------|----------|--------|---------|---------|---------|
+| 12 Mbps | 480 Mbps | 5 Gbps | 10 Gbps | 20 Gbps | 40 Gbps |
